# liora-system-apis

./: .env.example  .gitignore  auth-refresh-guide.md  cookies.txt  ema-api-reference.md  ema_cookies.json  pyproject.toml  requirements.txt  test_session_refresh.py  vercel.json  weave-phone-api-reference.md  zocdoc-api-discovery-log.md  zocdoc-api-reference.md  zocdoc_cookies.json
discovery/: zocdoc-cron-config.md  zocdoc-new-patient-processing.md
discovery/modmed/: ema-api-reference.md  ema_cookies.json  test_ema_auth.py  test_reschedule.py
discovery/weave/: test_weave_api.py  test_weave_phone_api.py  weave-api-discovery-log.md  weave-api-reference.md  weave-phone-discovery-log.md
discovery/zocdoc/: test_zocdoc_api.py  zocdoc_cookies.json
liora_tools/: README.md  __init__.py  __main__.py  cli.py  config.py  exceptions.py  utils.py
liora_tools/auth/: __init__.py  chrome_extract.py  ema.py  session_manager.py  weave.py  zocdoc.py
liora_tools/genies_bottle/: __init__.py  client.py
liora_tools/modmed/: __init__.py  client.py
liora_tools/scripts/: __init__.py  refresh_weave_token.py  zocdoc_new_booking.py
liora_tools/weave/: __init__.py  client.py
liora_tools/zocdoc/: __init__.py  browser_transport.py  client.py  queries.py  requests_transport.py
server/: auth.py  config.py  ema_service.py  errors.py  main.py  schemas.py
voice_agent/: __init__.py  __main__.py  ai_bridge.py  audio_pipeline.py  auth.py  call_manager.py  config.py  elevenlabs_bridge.py  grok_bridge.py  main.py  media_handler.py  requirements.txt  sip_client.py  sip_messages.py
(+4 files in other folders)
